--- a/Multiple_Linear_regression_multiple.ipynb
+++ b/Multiple_Linear_regression_multiple.ipynb
@@ -6,7 +6,7 @@
       "name": "Multiple Linear regression-multiple.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPjzP/yM5PA05ISniBI2XMu",
+      "authorship_tag": "ABX9TyOcCmTfgiQCFONKUx2svU/e",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -188,18 +188,18 @@
       "metadata": {
         "id": "2RtFWIBSpnr5",
         "colab_type": "code",
+        "outputId": "dc30cb7f-e254-4788-d5b9-e8afb06594b0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "69c6f1c7-b5f6-4813-ab33-d3759fbc9e44"
+        }
       },
       "source": [
         "from sklearn.linear_model import LinearRegression\n",
         "regressor = LinearRegression()\n",
         "regressor.fit(x_train, y_train)"
       ],
-      "execution_count": 24,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -211,14 +211,72 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 24
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "CqHH4ZcYVLqs",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Predicting the Test set Results"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "asd-lWHtVRBi",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "y_pred = regressor.predict(x_test)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gW1VO8jTV5b4",
+        "colab_type": "code",
+        "outputId": "8df203e4-c4ce-4c3f-e05f-b0c2355c5575",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 187
+        }
+      },
+      "source": [
+        "np.set_printoptions(precision=2)\n",
+        "print(np.concatenate((y_pred.reshape(len(y_pred),1),y_test.reshape(len(y_test),1)),axis=1))"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[[103015.2  103282.38]\n",
+            " [132582.28 144259.4 ]\n",
+            " [132447.74 146121.95]\n",
+            " [ 71976.1   77798.83]\n",
+            " [178537.48 191050.39]\n",
+            " [116161.24 105008.31]\n",
+            " [ 67851.69  81229.06]\n",
+            " [ 98791.73  97483.56]\n",
+            " [113969.44 110352.25]\n",
+            " [167921.07 166187.94]]\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "SywbGIV0tD3Q",
+        "id": "TvE6rkEzYFDe",
         "colab_type": "code",
         "colab": {}
       },
