--- a/Multiple_Linear_regression_multiple.ipynb
+++ b/Multiple_Linear_regression_multiple.ipynb
@@ -6,7 +6,7 @@
       "name": "Multiple Linear regression-multiple.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOcCmTfgiQCFONKUx2svU/e",
+      "authorship_tag": "ABX9TyMmDcBk3QKhq7ZldR7fR8Sc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -274,17 +274,133 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "TvE6rkEzYFDe",
-        "colab_type": "code",
-        "colab": {}
+        "id": "5p136WrJFBLj",
+        "colab_type": "text"
       },
       "source": [
-        ""
+        "### Making a single prediction (for example the profit of a startup with R&D Spend = 160000, Administration Spend = 130000, Marketing Spend = 300000 and State = 'California')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XbjzeZgnbjgk",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "4a294fe0-67ef-404f-ff8f-9cc9d89881f2"
+      },
+      "source": [
+        "print(regressor.predict([[1,0,0,160000,130000,300000]]))"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[181566.92]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "TXf9NlRFGlht",
+        "colab_type": "text"
+      },
+      "source": [
+        "Therefore, our model predicts that the profit of a Californian startup which spent 160000 in R&D, 130000 in Administration and 300000 in Marketing is $ 181566,92.\n",
+        "\n",
+        "**Important note 1:** Notice that the values of the features were all input in a double pair of square brackets. That's because the \"predict\" method always expects a 2D array as the format of its inputs. And putting our values into a double pair of square brackets makes the input exactly a 2D array. Simply put:\n",
+        "\n",
+        "$1, 0, 0, 160000, 130000, 300000 \\rightarrow \\textrm{scalars}$\n",
+        "\n",
+        "$[1, 0, 0, 160000, 130000, 300000] \\rightarrow \\textrm{1D array}$\n",
+        "\n",
+        "$[[1, 0, 0, 160000, 130000, 300000]] \\rightarrow \\textrm{2D array}$\n",
+        "\n",
+        "**Important note 2:** Notice also that the \"California\" state was not input as a string in the last column but as \"1, 0, 0\" in the first three columns. That's because of course the predict method expects the one-hot-encoded values of the state, and as we see in the second row of the matrix of features X, \"California\" was encoded as \"1, 0, 0\". And be careful to include these values in the first three columns, not the last three ones, because the dummy variables are always created in the first columns."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "eIDBghMZb_S6",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Getting the final Linear Regression equation with the values of the coefficients"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "b7ZimbOZb05K",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "19938ecf-c58c-45b4-bf7f-a54853edf7ee"
+      },
+      "source": [
+        "print(regressor.coef_)"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[ 8.66e+01 -8.73e+02  7.86e+02  7.73e-01  3.29e-02  3.66e-02]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "42lWRZJkcNm4",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "cb89feb6-a674-4bea-d674-a67ca9b6e9ce"
+      },
+      "source": [
+        "print(regressor.intercept_)"
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "42467.52924853204\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Y6jsRZyxcZMT",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Therefore, the equation of our multiple linear regression model is:\n",
+        "\n",
+        "Profit=86.6×Dummy State 1−873×Dummy State 2+786×Dummy State 3−0.773×R&D Spend+0.0329×Administration+0.0366×Marketing Spend+42467.53\n",
+        "\n",
+        "Important Note: To get these coefficients we called the \"coef_\" and \"intercept_\" attributes from our regressor object. Attributes in Python are different than methods and usually return a simple value or an array of values."
+      ]
     }
   ]
 }
